Additional dark mode tweaks (part of issue #43)

--- a/wx-src/pages/options.css
+++ b/wx-src/pages/options.css
@@ -21,6 +21,7 @@
     --color-tab-border-inactive: #b1b1b3;
     --color-tab-text-active: #0060df;
     --color-tab-border-active: #0a84ff;
+    --color-radio-opt-bkgd: #f9f9fa;
     --color-about-btn-bkgd: #f9f9fa;
     --color-about-btn-bkgd-hover: #ededf0;
     --color-about-btn-bkgd-active: #d7d7db;
@@ -46,6 +47,7 @@
 	--color-tab-border-inactive: #d7d7db;
 	--color-tab-text-active: #45a1ff;
 	--color-tab-border-active: #0a84ff;
+	--color-radio-opt-bkgd: #38383d;
 	--color-about-btn-bkgd: #2a2a2e;
 	--color-about-btn-bkgd-hover: #38383d;
 	--color-about-btn-bkgd-active: #4a4a4f;
@@ -177,8 +179,8 @@ fieldset select.browser-style {
 
 .tab > button {
     margin: 0;
-    padding-top: 6px;
-    padding-bottom: 8px;
+    padding-top: 4px;
+    padding-bottom: 6px;
     padding-left: 16px;
     padding-right: 16px;
     background-color: transparent;
@@ -223,9 +225,9 @@ fieldset select.browser-style {
 .action-radio-opt {
     margin: 8px 0 4px 0;
     padding: 16px 8px;
-    border: 1px solid #ddd;
+    border: 1px solid var(--color-fieldset-border);
     border-radius: 4px;
-    background-color: #f9f9fa;
+    background-color: var(--color-radio-opt-bkgd);
 }
 
 .action-radio-opt input[type="radio"] + label {
