--- a/wx-src/pages/restoreSession.css
+++ b/wx-src/pages/restoreSession.css
@@ -2,14 +2,36 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
-
 @import url("../style/laf.css");
 @import url("../style/lightbox.css");
 
 
+:root {
+    --url-bkgd-img: url("../img/restoreSessionPgBkg.svg");
+    --color-bkgd: none;
+    --color-text-default: black;
+    --color-main-border: #ddd;
+    --color-main-bkgd: #fefefe;
+    --color-main-border-shadow: #e0e0e0;
+}
+
+@media (prefers-color-scheme: dark) {
+    :root {
+	--url-bkgd-img: url("../img/restoreSessionPgBkg.svg");
+	--color-bkgd: #1a1a1e;
+	--color-text-default: #f9f9fa;
+	--color-main-border: #0c0c0d;
+	--color-main-bkgd: #2a2a2e;
+	--color-main-border-shadow: #0c0c0d;
+    }
+}
+
+
 body {
-    background-image: url("../img/restoreSessionPgBkg.svg");
+    background-image: var(--url-bkgd-img);
     background-repeat: repeat;
+    background-color: var(--color-bkgd);
+    color: var(--color-text-default);
 }
 
 h1 {
@@ -32,10 +54,10 @@ main {
     width: 540px;
     margin: 24px auto 24px auto;
     padding: 24px;
-    border: 1px solid #ddd;
+    border: 1px solid var(--color-main-border);
     border-radius: 2px;
-    box-shadow: 0 0 8px 2px #e0e0e0;
-    background-color: #fefefe;
+    box-shadow: 0 0 8px 2px var(--color-main-border-shadow);
+    background-color: var(--color-main-bkgd);
 }
 
 label {
